tests/testppx.ml
#install_printer Z.pp_print ;;
#install_printer Q.pp_print ;;

0z ;;
1z ;;
-1z ;;
123z ;;
-0b010z ;;
0o147z ;;
-0O123z ;;
0x18z ;;
-0Xaaz ;;

4294967297z ;; (* 2^32+1 *)
0x100000001z ;;
-4294967297z ;;
18446744073709551617z ;; (* 2^64+1 *)
0x10000000000000001z ;;
-18446744073709551617z ;;

0q ;;
1q ;;
-1q ;;
123q ;;
-0b010q ;;
0o147q ;;
-0O123q ;;
0x18q ;;
0xaaq ;;

4294967297q ;; (* 2^32+1 *)
0x100000001q ;;
-4294967297q ;;
18446744073709551617q ;; (* 2^64+1 *)
0x10000000000000001q ;;
-18446744073709551617q ;;

(* Fail *)
0b2z ;;
0O8z ;;
0x12g8z ;;
0b2q ;;
0O8q ;;
0x12g8q ;;

(* Test error positions *)
let foo = [ Q.neg 0x12.4q ] ;;
